fix rabbitmq bind

--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.rabbitmq.host=mustang.rmq.cloudamqp.com
-spring.rabbitmq.port=1883
-spring.rabbitmq.username=honqwptl:honqwptl
-spring.rabbitmq.password=LFHslcbHiP8v4B4Bxh1P9B7wd5wFzYI6
+spring.rabbitmq.addresses=amqps://honqwptl:LFHslcbHiP8v4B4Bxh1P9B7wd5wFzYI6@mustang.rmq.cloudamqp.com/honqwptl
