[API] Create basic API Structure

--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.rabbitmq.addresses=amqps://honqwptl:LFHslcbHiP8v4B4Bxh1P9B7wd5wFzYI6@mustang.rmq.cloudamqp.com/honqwptl
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=TicTacToe
+#spring.rabbitmq.addresses=amqps://honqwptl:LFHslcbHiP8v4B4Bxh1P9B7wd5wFzYI6@mustang.rmq.cloudamqp.com/honqwptl
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=TicTacToe
+spring.data.mongodb.uri = mongodb+srv://Nite:Nite1150@cluster0.5nqtj.mongodb.net/SOA?authSource=admin&replicaSet=atlas-vetgyw-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
+server.port=8081
