--- a/services/src/main/resources/application.properties
+++ b/services/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.rabbitmq.addresses=amqps://honqwptl:LFHslcbHiP8v4B4Bxh1P9B7wd5wFzYI6@mustang.rmq.cloudamqp.com/honqwptl
+spring.rabbitmq.addresses=amqps://honqwptl:LFHslcbHiP8v4B4Bxh1P9B7wd5wFzYI6@mustang.rmq.cloudamqp.com/honqwptl
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=TicTacToe
